--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "run": "tsc --build; node ./src/index.js",
     "test": "jest",
     "build": "tsc --build",
-    "clean": "rm -rf ./src/*.js"
+    "clean": "rm -rf ./src/*.js*"
   },
   "keywords": [],
   "author": "",
