Resolved jest.config package.json issues.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "module": "system",
+    "module": "es2020",
     "moduleResolution": "node",
     "esModuleInterop":true,
     "noImplicitAny": true,
