--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "ts-jest",
   "version": "1.0.0",
+  "type":"module",
   "description": "",
   "main": "./src/index.js",
   "scripts": {
     "run": "tsc --build; node ./src/index.js",
-    "test": "jest",
+    "test": "node --experimental-vm-modules node_modules/.bin/jest --config=./jest.config.js",
     "build": "tsc --build",
     "clean": "rm -rf ./src/*.js*"
   },
@@ -14,8 +15,8 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^26.0.23",
-    "jest": "^26.6.3",
-    "ts-jest": "^26.5.5",
+    "jest": "^27.0.0-next.9",
+    "ts-jest": "^27.0.0-next.11",
     "typescript": "^4.2.4"
   }
-}
+  }
